--- a/tests/expected/url-prefix/e.html
+++ b/tests/expected/url-prefix/e.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html>
 <head>
@@ -7,13 +6,12 @@
   <title>url-prefix</title>
 </head>
 <body>
-  <p><a href="/sub1/sub2/">My library</a>
+  <p><a href="/sub1/sub2">My library</a>
 : </p>
   <h1>url-prefix</h1>
   <hr/>
   <div><li><a href="/sub1/sub2/url-prefix/a">a.md</a>
 </li><li><a href="/sub1/sub2/url-prefix/dir1">dir1</a>
-</li><li><a href="/sub1/sub2/url-prefix/dir2">dir2</a>
 </li></div>
 </body>
 </html>
