--- a/tests/expected/directory-listing/e.html
+++ b/tests/expected/directory-listing/e.html
@@ -11,7 +11,7 @@
   <h1>directory-listing</h1>
   <hr/>
   <div><li><a href="/directory-listing/Files">&lt;script&gt;&lt;/script&gt;&lt;&lt;&lt;Customized title&gt;&gt;&gt;[][]🐊</a>
-</li><li><a href="/directory-listing/Spec-Chars%20=%22%20%20%E4%B8%AD%E6%96%87">Spec-Chars =&#34;  中文</a>
+</li><li><a href="/directory-listing/Spec-Chars%20=%20%E4%B8%AD%E6%96%87">Spec-Chars = 中文</a>
 </li><li><a href="/directory-listing/another%20file">another file</a>
 </li><li><a href="/directory-listing/file1">&lt;script&gt;&lt;/script&gt; file1 &gt;&gt;&gt; 🐊</a>
 </li></div>
